2008-10-27  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Oki-B2200n.xml, printer/Oki-B2400n.xml,
	  printer/Oki-B4400n.xml, printer/Oki-B4600n.xml,
	  printer/Oki-B6200n.xml, printer/Oki-B6250dn.xml,
	  printer/Oki-B6250n.xml, printer/Oki-B6300dn.xml,
	  printer/Oki-B6300n.xml, printer/Oki-B6500dn.xml,
	  printer/Oki-B6500n.xml, printer/Oki-C5400dn.xml,
	  printer/Oki-C5400dtn.xml, printer/Oki-C5400n.xml,
	  printer/Oki-C5400tn.xml, printer/Oki-C6000dn.xml,
	  printer/Oki-C6050dn.xml, printer/Oki-C6100dtn.xml,
	  printer/Oki-C6100hdn.xml, printer/Oki-C6100n.xml,
	  printer/Oki-C6150dn.xml, printer/Oki-C6150dtn.xml,
	  printer/Oki-C6150hdn.xml, printer/Oki-C710dn.xml,
	  printer/Oki-C710dtn.xml, printer/Oki-C7300dn.xml,
	  printer/Oki-C7300n.xml, printer/Oki-C7350hdn.xml,
	  printer/Oki-C7550hdn.xml, printer/Oki-C8800dn.xml,
	  printer/Oki-C9200dn.xml, printer/Oki-C9200n.xml,
	  printer/Oki-C9650dn.xml, printer/Oki-C9650hdn.xml,
	  printer/Oki-C9650hdtn.xml, printer/Oki-C9800hdn.xml,
	  printer/Oki-B4600n_PS.xml, printer/Oki-B4600_PS.xml,
	  printer/Oki-C6000n.xml, printer/Oki-C6000.xml,
	  printer/Oki-C6050n.xml, printer/Oki-C6050.xml,
	  printer/Oki-C6150n.xml, printer/Oki-C6150.xml,
	  printer/Oki-C7350n.xml, printer/Oki-C7350.xml,
	  printer/Oki-C7550n.xml, printer/Oki-C7550.xml,
	  printer/Oki-C8800n.xml, printer/Oki-C8800.xml,
	  printer/Oki-C9650n.xml, printer/Oki-C9650.xml,
	  printer/Oki-C9800hn.xml, printer/Oki-C9800.xml,
	  db/oldprinterids: Completed cleaning up entries for Oki
	  printers. We need only one entry per PPD file not oner for each
	  combination of accessories.

	* printer/Oce-9260.xml: Fixed typo.

2008-10-27  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Oki-C5700dn.xml, printer/Oki-C5700n.xml,
	  printer/Oki-C5900cdtn.xml, printer/Oki-C5900dn.xml,
	  printer/Oki-C5900dtn.xml, printer/Oki-C5900n.xml,
	  printer/Oki-C7500hdn.xml, printer/Oki-C9300dn.xml,
	  printer/Oki-C9300hdn.xml, printer/Oki-C9300n.xml,