@@ -65,12 +65,12 @@
   <printer><id>printer/Brother-HL-2060</id></printer>
   <printer><id>printer/Brother-HL-4V</id></printer>
   <printer><id>printer/Brother-HL-6</id></printer>
-  <printer><id>printer/Brother-HL-630_631</id></printer>
+  <printer><id>printer/Brother-HL-630</id></printer>
   <printer><id>printer/Brother-HL-641_645_655M</id></printer>
   <printer><id>printer/Brother-HL-660</id></printer>
   <printer><id>printer/Brother-HL-665</id></printer>
   <printer><id>printer/Brother-HL-6V</id></printer>
-  <printer><id>printer/Brother-HL-730_730DX</id></printer>
+  <printer><id>printer/Brother-HL-730</id></printer>
   <printer><id>printer/Brother-HL-960</id></printer>
   <printer><id>printer/Brother-HL-P2000</id></printer>
   <printer><id>printer/Brother-M-1309</id></printer>
@@ -85,7 +85,7 @@
   <printer><id>printer/Brother-M-1924L</id></printer>
   <printer><id>printer/Brother-M-4309</id></printer>
   <printer><id>printer/Brother-MFC-4000_4500_5500</id></printer>
-  <printer><id>printer/Brother-MFC-6550MC_7550MC</id></printer>
+  <printer><id>printer/Brother-MFC-6550MC</id></printer>
   <printer><id>printer/Brother-MFC-P2000</id></printer>
   <printer><id>printer/Canon-BJ_F100</id></printer>
   <printer><id>printer/Canon-BJ_F200</id></printer>
@@ -172,7 +172,7 @@
   <printer><id>printer/Epson-DLQ-2000__360_dpi</id></printer>
   <printer><id>printer/Epson-DLQ-3000plus</id></printer>
   <printer><id>printer/Epson-EPL-5700</id></printer>
-  <printer><id>printer/Epson-EPL-7000_7100</id></printer>
+  <printer><id>printer/Epson-EPL-7100</id></printer>
   <printer><id>printer/Epson-EPL-8000_8100</id></printer>
   <printer><id>printer/Epson-EPL-N1200</id></printer>
   <printer><id>printer/Epson-EPL-N1600</id></printer>
@@ -289,11 +289,12 @@
   <printer><id>printer/Epson-Stylus_Pro</id></printer>
   <printer><id>printer/Epson-TLQ-4800</id></printer>
   <printer><id>printer/Epson-TSQ-4800</id></printer>
-  <printer><id>printer/HP-C_LaserJet_4500</id></printer>
-  <printer><id>printer/HP-C_LaserJet_4550</id></printer>
-  <printer><id>printer/HP-Color_LaserJet_5_5M</id></printer>
-  <printer><id>printer/HP-C_LaserJet_8500</id></printer>
-  <printer><id>printer/HP-C_LaserJet_8550</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_4500</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_4550</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_5</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_5M</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_8500</id></printer>
+  <printer><id>printer/HP-Color_LaserJet_8550</id></printer>
   <printer><id>printer/HP-Color_LaserJet</id></printer>
   <printer><id>printer/HP-LaserJet_1100</id></printer>
   <printer><id>printer/HP-LaserJet_1200</id></printer>
@@ -301,27 +302,33 @@
   <printer><id>printer/HP-LaserJet_2100</id></printer>
   <printer><id>printer/HP-LaserJet_2200</id></printer>
   <printer><id>printer/HP-LaserJet_3200</id></printer>
-  <printer><id>printer/HP-LaserJet_4plus_4Mplus</id></printer>
-  <printer><id>printer/HP-LaserJet_4000T_TN</id></printer>
-  <printer><id>printer/HP-LaserJet_4000_4000N</id></printer>
+  <printer><id>printer/HP-LaserJet_4plus</id></printer>
+  <printer><id>printer/HP-LaserJet_4Mplus</id></printer>
+  <printer><id>printer/HP-LaserJet_4000</id></printer>
   <printer><id>printer/HP-LaserJet_4050</id></printer>
   <printer><id>printer/HP-LaserJet_4100</id></printer>
   <printer><id>printer/HP-LaserJet_4L</id></printer>
   <printer><id>printer/HP-LaserJet_4LJ_Pro</id></printer>
   <printer><id>printer/HP-LaserJet_4ML</id></printer>
   <printer><id>printer/HP-LaserJet_4PJ</id></printer>
-  <printer><id>printer/HP-LaserJet_4P_4MP</id></printer>
-  <printer><id>printer/HP-LaserJet_4Si_4Si_Mx</id></printer>
-  <printer><id>printer/HP-LaserJet_4V_4MV</id></printer>
-  <printer><id>printer/HP-LaserJet_4_4M</id></printer>
+  <printer><id>printer/HP-LaserJet_4P</id></printer>
+  <printer><id>printer/HP-LaserJet_4MP</id></printer>
+  <printer><id>printer/HP-LaserJet_4Si</id></printer>
+  <printer><id>printer/HP-LaserJet_4MV</id></printer>
+  <printer><id>printer/HP-LaserJet_4V</id></printer>
+  <printer><id>printer/HP-LaserJet_4</id></printer>
+  <printer><id>printer/HP-LaserJet_4M</id></printer>
   <printer><id>printer/HP-LaserJet_500plus</id></printer>
   <printer><id>printer/HP-LaserJet_5000</id></printer>
   <printer><id>printer/HP-LaserJet_5L</id></printer>
-  <printer><id>printer/HP-LaserJet_5P_5MP</id></printer>
-  <printer><id>printer/HP-LaserJet_5Si_5Si_Mx_5Si_Mopier</id></printer>
-  <printer><id>printer/HP-LaserJet_5_5M</id></printer>
-  <printer><id>printer/HP-LaserJet_6L_6L_Gold</id></printer>
-  <printer><id>printer/HP-LaserJet_6P_6MP</id></printer>
+  <printer><id>printer/HP-LaserJet_5P</id></printer>
+  <printer><id>printer/HP-LaserJet_5MP</id></printer>
+  <printer><id>printer/HP-LaserJet_5Si</id></printer>
+  <printer><id>printer/HP-LaserJet_5</id></printer>
+  <printer><id>printer/HP-LaserJet_5M</id></printer>
+  <printer><id>printer/HP-LaserJet_6L</id></printer>
+  <printer><id>printer/HP-LaserJet_6P</id></printer>
+  <printer><id>printer/HP-LaserJet_6MP</id></printer>
   <printer><id>printer/HP-LaserJet_8000</id></printer>
   <printer><id>printer/HP-LaserJet_8100</id></printer>
   <printer><id>printer/HP-LaserJet_8150</id></printer>
@@ -333,8 +340,8 @@
   <printer><id>printer/HP-LaserJet_3Si</id></printer>
   <printer><id>printer/HP-LaserJet_2Pplus</id></printer>
   <printer><id>printer/HP-LaserJet_2P</id></printer>
-  <printer><id>printer/HP-LaserJetplus</id></printer>
-  <printer><id>printer/HP-LaserJet_Series_2</id></printer>
+  <printer><id>printer/HP-LaserJet_Plus</id></printer>
+  <printer><id>printer/HP-LaserJet_2</id></printer>
   <printer><id>printer/HP-Mopier_240</id></printer>
   <printer><id>printer/HP-Mopier_320</id></printer>
   <printer><id>printer/IBM-5183_Portable_Printer</id></printer>
@@ -367,19 +374,16 @@
   <printer><id>printer/Generic-24-pin_80_Col</id></printer>
   <printer><id>printer/Generic-9-pin_136_Col</id></printer>
   <printer><id>printer/Generic-9-pin_80_Col</id></printer>
-  <printer><id>printer/Others-BJ-230</id></printer>
   <printer><id>printer/Daewoo-DP-3630H</id></printer>
   <printer><id>printer/Daewoo-DP-7200H</id></printer>
   <printer><id>printer/Daewoo-DP-7400C</id></printer>
   <printer><id>printer/GoldStar-GLP-1450</id></printer>
   <printer><id>printer/GoldStar-GLP-2050</id></printer>
   <printer><id>printer/GoldStar-GLP-5750</id></printer>
-  <printer><id>printer/Others-HDMF_NONE-FF</id></printer>
   <printer><id>printer/Hansum-BJ-330H</id></printer>
   <printer><id>printer/Hansum-HS-650C</id></printer>
   <printer><id>printer/Jepcom-JP-B330</id></printer>
   <printer><id>printer/Generic-48_pin</id></printer>
-  <printer><id>printer/Others-LG_GIP_3000Q_3000plus</id></printer>
   <printer><id>printer/Qnix-PICASSOI</id></printer>
   <printer><id>printer/Qnix-PICASSOII</id></printer>
   <printer><id>printer/Qnix-QBJ-3630E</id></printer>
@@ -396,53 +400,54 @@
   <printer><id>printer/Samsung-SP-4021</id></printer>
   <printer><id>printer/Sindo-ExecJet_4072</id></printer>
   <printer><id>printer/Sindo-ExecJet_4076</id></printer>
-  <printer><id>printer/Others-VP-6570K</id></printer>
-  <printer><id>printer/Kyocera-F-1000A_F-1000</id></printer>
+  <printer><id>printer/Kyocera-F-1000</id></printer>
   <printer><id>printer/Kyocera-F-1200S</id></printer>
-  <printer><id>printer/Kyocera-F-1800A_F-1800</id></printer>
-  <printer><id>printer/Kyocera-F-2000A_F-2200S</id></printer>
-  <printer><id>printer/Kyocera-F-3000A_F-3300</id></printer>
-  <printer><id>printer/Kyocera-F-5000A_F-5000</id></printer>
-  <printer><id>printer/Kyocera-F-800A_F-800</id></printer>
+  <printer><id>printer/Kyocera-F-1800</id></printer>
+  <printer><id>printer/Kyocera-F-2200S</id></printer>
+  <printer><id>printer/Kyocera-F-3300</id></printer>
+  <printer><id>printer/Kyocera-F-5000</id></printer>
+  <printer><id>printer/Kyocera-F-800</id></printer>
   <printer><id>printer/Kyocera-F-820</id></printer>
   <printer><id>printer/Kyocera-FS-1000plus</id></printer>
   <printer><id>printer/Kyocera-FS-1000</id></printer>
   <printer><id>printer/Kyocera-FS-1200</id></printer>
-  <printer><id>printer/Kyocera-FS-1500A_FS-1500</id></printer>
+  <printer><id>printer/Kyocera-FS-1500</id></printer>
   <printer><id>printer/Kyocera-FS-1550plus</id></printer>
-  <printer><id>printer/Kyocera-FS-1550A_FS-1550</id></printer>
+  <printer><id>printer/Kyocera-FS-1550</id></printer>
   <printer><id>printer/Kyocera-FS-1600plus</id></printer>
-  <printer><id>printer/Kyocera-FS-1600A_FS-1600</id></printer>
+  <printer><id>printer/Kyocera-FS-1600</id></printer>
   <printer><id>printer/Kyocera-FS-1700plus</id></printer>
   <printer><id>printer/Kyocera-FS-1700</id></printer>
   <printer><id>printer/Kyocera-FS-1750</id></printer>
-  <printer><id>printer/Kyocera-FS-1800_FS-1800N</id></printer>
+  <printer><id>printer/Kyocera-FS-1800</id></printer>
   <printer><id>printer/Kyocera-FS-3400plus</id></printer>
-  <printer><id>printer/Kyocera-FS-3400A_FS-3400</id></printer>
-  <printer><id>printer/Kyocera-FS-3500A_FS-3500</id></printer>
+  <printer><id>printer/Kyocera-FS-3400</id></printer>
+  <printer><id>printer/Kyocera-FS-3500</id></printer>
   <printer><id>printer/Kyocera-FS-3600plus</id></printer>
-  <printer><id>printer/Kyocera-FS-3600A_FS-3600</id></printer>
+  <printer><id>printer/Kyocera-FS-3600</id></printer>
   <printer><id>printer/Kyocera-FS-3700plus</id></printer>
   <printer><id>printer/Kyocera-FS-3700</id></printer>
   <printer><id>printer/Kyocera-FS-3750</id></printer>
-  <printer><id>printer/Kyocera-FS-3800_FS-3800N</id></printer>
-  <printer><id>printer/Kyocera-FS-400A_FS-400</id></printer>
+  <printer><id>printer/Kyocera-FS-3800</id></printer>
+  <printer><id>printer/Kyocera-FS-400</id></printer>
   <printer><id>printer/Kyocera-FS-5500A_FS-5500</id></printer>
   <printer><id>printer/Kyocera-FS-5800C</id></printer>
   <printer><id>printer/Kyocera-FS-5900C</id></printer>
   <printer><id>printer/Kyocera-FS-600</id></printer>
   <printer><id>printer/Kyocera-FS-6300</id></printer>
-  <printer><id>printer/Kyocera-FS-6500_6500plus</id></printer>
+  <printer><id>printer/Kyocera-FS-6500</id></printer>
+  <printer><id>printer/Kyocera-FS-6500plus</id></printer>
   <printer><id>printer/Kyocera-FS-6700</id></printer>
   <printer><id>printer/Kyocera-FS-680</id></printer>
   <printer><id>printer/Kyocera-FS-6900</id></printer>
   <printer><id>printer/Kyocera-FS-7000plus</id></printer>
   <printer><id>printer/Kyocera-FS-7000</id></printer>
   <printer><id>printer/Kyocera-FS-800</id></printer>
-  <printer><id>printer/Kyocera-FS-850A_FS-850</id></printer>
+  <printer><id>printer/Kyocera-FS-850</id></printer>
   <printer><id>printer/Kyocera-FS-9000</id></printer>
   <printer><id>printer/Kyocera-LS_6550</id></printer>
-  <printer><id>printer/Oki-OkiPage_6e_6ex</id></printer>
+  <printer><id>printer/Oki-OkiPage_6e</id></printer>
+  <printer><id>printer/Oki-OkiPage_6ex</id></printer>
   <printer><id>printer/Oki-OkiPos_425D</id></printer>
   <printer><id>printer/Oki-OkiPos_425S</id></printer>
   <printer><id>printer/Oki-ML-184_Turbo</id></printer>
