@@ -1,4 +1,8 @@
-2008-10-27  Till Kamppeter <till.kamppeter@gmail.com>
+2008-10-28  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/omni.xml: Matched printer model names with existing entries
+	  to not have so many duplicate printer entries in the "Show all
+	  printers made by ..." lists.
 
 	* printer/Oki-B2200n.xml, printer/Oki-B2400n.xml,
 	  printer/Oki-B4400n.xml, printer/Oki-B4600n.xml,
